# links

./: .gitignore  Dockerfile  compose.yml  pyproject.toml
links/: __init__.py
links/api/: __init__.py  dependencies.py  errors.py  lifespan.py  schemas.py
links/api/links/: router.py  schemas.py
links/db/: __init__.py  lifespan.py
links/db/migrations/models/: 0_20260425044643_init.py
links/db/models/: links.py
links/lib/: settings.py
static/: index.html
static/css/: style.css
static/js/: script.js
